--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -491,14 +491,17 @@ components:
           properties:
             sanction_lists:
               type: array
+              description: The sanction lists through which the entity shall be searched through
               items:
                 type: string
             indices:
               type: array
+              description: The indices assigned to each person to which the data in the response is mapped
               items:
                 type: string
             must_match_attributes:
               type: array
+              description: The attributes which will be enforced as a strict filter
               items:
                 type: string
         persons:
@@ -542,8 +545,10 @@ components:
           description: First name of the query
         middle_name:
           type: string
+          description: Middle name of the query
         last_name:
           type: string
+          description: Last name of the query
         dob:
           type: string
           description: Date of birth of the person
