--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -268,8 +268,6 @@ paths:
           ### Payload request schema for single search
           In order to perform a search on a batch of persons through the sanction lists, the full name and the desired sanction lists are required. Additionally, a unique index has to be allocated to each person to which the results would be mapped as well. The search returns a list with all the possible matches with a score of the match. Advanced attributes can be provided in order to make the search results stricter.
       parameters: []
-      tags:
-        - Entity Search
     parameters: []
   /search/location/geo:
     post:
@@ -344,6 +342,19 @@ paths:
           In order to perform a search on multiple organizations through the sanction lists, the name and the desired sanction lists are required. Additionally, a unique index has to be assigned to each organization searched for in order to map the results to it in the output payload. The search returns a list with all the possible matches with a score. Advanced attributes can be provided in order to make the search results stricter.
       tags:
         - Entity Search
+  /sanctions/list/entry:
+    get:
+      summary: Your GET endpoint
+      tags: []
+      responses:
+        '200':
+          description: OK
+      operationId: get-search-sanctions-list-entry
+      description: Get the entry from the official sanctions list based on the result from the search calls
+      requestBody:
+        description: ''
+      parameters: []
+    parameters: []
 components:
   schemas:
     personSearchAttributes:
@@ -649,6 +660,375 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/organization'
+    cfsp:
+      title: cfsp
+      type: object
+      x-examples:
+        cfsp_payload_example:
+          fileGenerationDate: 29/04/2020
+          Entity_LogicalId: 43
+          Entity_EU_ReferenceNumber: EU.85.7
+          Entity_UnitedNationId: ''
+          Entity_DesignationDate: ''
+          Entity_DesignationDetails: ''
+          Entity_Remark: (UNSC RESOLUTION 1483 BASIS)
+          Entity_SubjectType: P
+          Entity_SubjectType_ClassificationCode: person
+          Entity_Regulation_Type: regulation
+          Entity_Regulation_OrganisationType: commission
+          Entity_Regulation_PublicationDate: '2003-07-08'
+          Entity_Regulation_EntryIntoForceDate: '2003-07-07'
+          Entity_Regulation_NumberTitle: 1210/2003 (OJ L169)
+          Entity_Regulation_Programme: IRQ
+          Entity_Regulation_PublicationUrl: 'http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=OJ:L:2003:169:0006:0023:EN:PDF'
+          NameAlias_LastName: ''
+          NameAlias_FirstName: ''
+          NameAlias_MiddleName: ''
+          NameAlias_WholeName: Aziz Salih al-Numan
+          NameAlias_NameLanguage: ''
+          NameAlias_Gender: ''
+          NameAlias_Title: ''
+          NameAlias_Function: Former Governor of Karbala and An Najaf;
+          NameAlias_LogicalId: 64
+          NameAlias_RegulationLanguage: EN
+          NameAlias_Remark: ''
+          NameAlias_Regulation_Type: regulation
+          NameAlias_Regulation_OrganisationType: commission
+          NameAlias_Regulation_PublicationDate: '2003-07-08'
+          NameAlias_Regulation_EntryIntoForceDate: '2003-07-07'
+          NameAlias_Regulation_NumberTitle: 1210/2003 (OJ L169)
+          NameAlias_Regulation_Programme: IRQ
+          NameAlias_Regulation_PublicationUrl: 'http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=OJ:L:2003:169:0006:0023:EN:PDF'
+          Address_City: ''
+          Address_Street: ''
+          Address_PoBox: ''
+          Address_ZipCode: ''
+          Address_Region: ''
+          Address_Place: ''
+          Address_AsAtListingTime: ''
+          Address_ContactInfo: ''
+          Address_CountryIso2Code: ''
+          Address_CountryDescription: ''
+          Address_LogicalId: ''
+          Address_RegulationLanguage: ''
+          Address_Remark: ''
+          Address_Regulation_Type: ''
+          Address_Regulation_OrganisationType: ''
+          Address_Regulation_PublicationDate: ''
+          Address_Regulation_EntryIntoForceDate: ''
+          Address_Regulation_NumberTitle: ''
+          Address_Regulation_Programme: ''
+          Address_Regulation_PublicationUrl: ''
+          BirthDate_BirthDate: ''
+          BirthDate_Day: ''
+          BirthDate_Month: ''
+          BirthDate_Year: ''
+          BirthDate_YearRangeFrom: ''
+          BirthDate_YearRangeTo: ''
+          BirthDate_Circa: ''
+          BirthDate_CalendarType: ''
+          BirthDate_ZipCode: ''
+          BirthDate_Region: ''
+          BirthDate_Place: ''
+          BirthDate_City: ''
+          BirthDate_CountryIso2Code: ''
+          BirthDate_CountryDescription: ''
+          BirthDate_LogicalId: ''
+          BirthDate_RegulationLanguage: ''
+          BirthDate_Remark: ''
+          BirthDate_Regulation_Type: ''
+          BirthDate_Regulation_OrganisationType: ''
+          BirthDate_Regulation_PublicationDate: ''
+          BirthDate_Regulation_EntryIntoForceDate: ''
+          BirthDate_Regulation_NumberTitle: ''
+          BirthDate_Regulation_Programme: ''
+          BirthDate_Regulation_PublicationUrl: ''
+          Identification_Number: ''
+          Identification_Diplomatic: ''
+          Identification_KnownExpired: ''
+          Identification_KnownFalse: ''
+          Identification_ReportedLost: ''
+          Identification_RevokedByIssuer: ''
+          Identification_IssuedBy: ''
+          Identification_IssuedDate: ''
+          Identification_ValidFrom: ''
+          Identification_ValidTo: ''
+          Identification_LatinNumber: ''
+          Identification_NameOnDocument: ''
+          Identification_TypeCode: ''
+          Identification_TypeDescription: ''
+          Identification_Region: ''
+          Identification_CountryIso2Code: ''
+          Identification_CountryDescription: ''
+          Identification_LogicalId: ''
+          Identification_RegulationLanguage: ''
+          Identification_Remark: ''
+          Identification_Regulation_Type: ''
+          Identification_Regulation_OrganisationType: ''
+          Identification_Regulation_PublicationDate: ''
+          Identification_Regulation_EntryIntoForceDate: ''
+          Identification_Regulation_NumberTitle: ''
+          Identification_Regulation_Programme: ''
+          Identification_Regulation_PublicationUrl: ''
+          Citizenship_Region: ''
+          Citizenship_CountryIso2Code: ''
+          Citizenship_CountryDescription: ''
+          Citizenship_LogicalId: ''
+          Citizenship_RegulationLanguage: ''
+          Citizenship_Remark: ''
+          Citizenship_Regulation_Type: ''
+          Citizenship_Regulation_OrganisationType: ''
+          Citizenship_Regulation_PublicationDate: ''
+          Citizenship_Regulation_EntryIntoForceDate: ''
+          Citizenship_Regulation_NumberTitle: ''
+          Citizenship_Regulation_Programme: ''
+          Citizenship_Regulation_PublicationUrl: ''
+      properties:
+        fileGenerationDate:
+          type: string
+        Entity_LogicalId:
+          type: integer
+        Entity_EU_ReferenceNumber:
+          type: string
+        Entity_UnitedNationId:
+          type: string
+        Entity_DesignationDate:
+          type: string
+        Entity_DesignationDetails:
+          type: string
+        Entity_Remark:
+          type: string
+        Entity_SubjectType:
+          type: string
+        Entity_SubjectType_ClassificationCode:
+          type: string
+        Entity_Regulation_Type:
+          type: string
+        Entity_Regulation_OrganisationType:
+          type: string
+        Entity_Regulation_PublicationDate:
+          type: string
+        Entity_Regulation_EntryIntoForceDate:
+          type: string
+        Entity_Regulation_NumberTitle:
+          type: string
+        Entity_Regulation_Programme:
+          type: string
+        Entity_Regulation_PublicationUrl:
+          type: string
+        NameAlias_FirstName:
+          type: string
+        NameAlias_MiddleName:
+          type: string
+        NameAlias_WholeName:
+          type: string
+        NameAlias_NameLanguage:
+          type: string
+        NameAlias_Gender:
+          type: string
+        NameAlias_Title:
+          type: string
+        NameAlias_Function:
+          type: string
+        NameAlias_LogicalId:
+          type: string
+        NameAlias_RegulationLanguage:
+          type: string
+        NameAlias_Remark:
+          type: string
+        NameAlias_Regulation_Type:
+          type: string
+        NameAlias_Regulation_OrganisationType:
+          type: string
+        NameAlias_Regulation_PublicationDate:
+          type: string
+        NameAlias_Regulation_EntryIntoForceDate:
+          type: string
+        NameAlias_Regulation_NumberTitle:
+          type: string
+        NameAlias_Regulation_Programme:
+          type: string
+        NameAlias_Regulation_PublicationUrl:
+          type: string
+        Address_City:
+          type: string
+        Address_Street:
+          type: string
+        Address_PoBox:
+          type: string
+        Address_ZipCode:
+          type: string
+        Address_Region:
+          type: string
+        Address_Place:
+          type: string
+        Address_AsAtListingTime:
+          type: string
+        Address_ContactInfo:
+          type: string
+        Address_CountryIso2Code:
+          type: string
+        Address_CountryDescription:
+          type: string
+        Address_LogicalId:
+          type: string
+        Address_RegulationLanguage:
+          type: string
+        Address_Remark:
+          type: string
+        Address_Regulation_Type:
+          type: string
+        Address_Regulation_OrganisationType:
+          type: string
+        Address_Regulation_PublicationDate:
+          type: string
+        Address_Regulation_EntryIntoForceDate:
+          type: string
+        Address_Regulation_NumberTitle:
+          type: string
+        Address_Regulation_Programme:
+          type: string
+        Address_Regulation_PublicationUrl:
+          type: string
+        BirthDate_BirthDate:
+          type: string
+        BirthDate_Day:
+          type: string
+        BirthDate_Month:
+          type: string
+        BirthDate_Year:
+          type: string
+        BirthDate_YearRangeFrom:
+          type: string
+        BirthDate_YearRangeTo:
+          type: string
+        BirthDate_Circa:
+          type: string
+        BirthDate_CalendarType:
+          type: string
+        BirthDate_ZipCode:
+          type: string
+        BirthDate_Region:
+          type: string
+        BirthDate_Place:
+          type: string
+        BirthDate_City:
+          type: string
+        BirthDate_CountryIso2Code:
+          type: string
+        BirthDate_CountryDescription:
+          type: string
+        BirthDate_LogicalId:
+          type: string
+        BirthDate_RegulationLanguage:
+          type: string
+        BirthDate_Remark:
+          type: string
+        BirthDate_Regulation_Type:
+          type: string
+        BirthDate_Regulation_OrganisationType:
+          type: string
+        BirthDate_Regulation_PublicationDate:
+          type: string
+        BirthDate_Regulation_EntryIntoForceDate:
+          type: string
+        BirthDate_Regulation_NumberTitle:
+          type: string
+        BirthDate_Regulation_Programme:
+          type: string
+        BirthDate_Regulation_PublicationUrl:
+          type: string
+        Identification_Number:
+          type: string
+        Identification_Diplomatic:
+          type: string
+        Identification_KnownExpired:
+          type: string
+        Identification_KnownFalse:
+          type: string
+        Identification_ReportedLost:
+          type: string
+        Identification_RevokedByIssuer:
+          type: string
+        Identification_IssuedBy:
+          type: string
+        Identification_IssuedDate:
+          type: string
+        Identification_ValidFrom:
+          type: string
+        Identification_ValidTo:
+          type: string
+        Identification_LatinNumber:
+          type: string
+        Identification_NameOnDocument:
+          type: string
+        Identification_TypeCode:
+          type: string
+        Identification_TypeDescription:
+          type: string
+        Identification_Region:
+          type: string
+        Identification_CountryIso2Code:
+          type: string
+        Identification_CountryDescription:
+          type: string
+        Identification_LogicalId:
+          type: string
+        Identification_RegulationLanguage:
+          type: string
+        Identification_Remark:
+          type: string
+        Identification_Regulation_Type:
+          type: string
+        Identification_Regulation_OrganisationType:
+          type: string
+        Identification_Regulation_PublicationDate:
+          type: string
+        Identification_Regulation_EntryIntoForceDate:
+          type: string
+        Identification_Regulation_NumberTitle:
+          type: string
+        Identification_Regulation_Programme:
+          type: string
+        Identification_Regulation_PublicationUrl:
+          type: string
+        Citizenship_Region:
+          type: string
+        Citizenship_CountryIso2Code:
+          type: string
+        Citizenship_CountryDescription:
+          type: string
+        Citizenship_LogicalId:
+          type: string
+        Citizenship_RegulationLanguage:
+          type: string
+        Citizenship_Remark:
+          type: string
+        Citizenship_Regulation_Type:
+          type: string
+        Citizenship_Regulation_OrganisationType:
+          type: string
+        Citizenship_Regulation_PublicationDate:
+          type: string
+        Citizenship_Regulation_EntryIntoForceDate:
+          type: string
+        Citizenship_Regulation_NumberTitle:
+          type: string
+        Citizenship_Regulation_Programme:
+          type: string
+        Citizenship_Regulation_PublicationUrl:
+          type: string
+        NameAlias_LastName:
+          type: string
+      x-tags:
+        - Sanction List Payloads
+      description: ''
+    sdn:
+      title: sdn
+      type: object
+      properties:
+        id:
+          type: string
   securitySchemes:
     cubemos_api_key:
       name: API Key
