--- a/swagger/sanctions_list.v1.yaml
+++ b/swagger/sanctions_list.v1.yaml
@@ -42,7 +42,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
                       - person:
                           first_name: Serhii
                           middle_name: ''
@@ -53,7 +53,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/cfsp?entityLogicalID=12345'
         '400':
           description: Bad Request
         '401':
@@ -138,7 +138,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
                       - organization:
                           address:
                             country: DE
@@ -147,7 +147,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
           headers: {}
         '400':
           description: Bad Request
@@ -204,7 +204,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
                       - person:
                           first_name: Serhii
                           middle_name: ''
@@ -215,7 +215,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
                     organizations:
                       - organization:
                           address:
@@ -225,7 +225,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
                       - organization:
                           address:
                             country: DE
@@ -234,7 +234,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry/?entityLogicalID=12345'
         '400':
           description: Bad Request
         '401':
@@ -396,7 +396,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
                       - person:
                           first_name: Serhii
                           middle_name: ''
@@ -407,7 +407,7 @@ paths:
                             - Serhiy Klyuyev
                           nationalities:
                             - UA
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
                     organizations:
                       - organization:
                           address:
@@ -417,7 +417,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
                       - organization:
                           address:
                             country: DE
@@ -426,7 +426,7 @@ paths:
                             street: Hermann Straße 1
                           headquarter_country: DE
                           aliases: []
-                          list_entry_url: 'GET https://sanctions-api.cubemos.com/sanctions/list/entry/?=12345 HTTP/1.1'
+                          list_entry_url: 'https://sanctions-api.cubemos.com/list/entry?entityLogicalID=12345'
       requestBody:
         content:
           application/json:
@@ -445,8 +445,6 @@ paths:
         description: "### Payload request scheme for single search\nIn order to search for a location bassed on the geographical co-ordinates, the sanction lists as well as precise co-ordinates are required. The resulting payload consists of all the entities found at the address with their respective match scores. Please note that the higher the search radius, the bigger could be the output response payload.  "
       description: "### Search on an entity through the desired sanction lists in a radius around a geographical co-ordinate\nThis API call allows you to perform a search through the desired sanction lists for any entity at the desired location. The search results returned are a list of all entries from the sanction lists which match to the input along with the degree of the match. "
       parameters: []
-      tags:
-        - Entity Search
   /batchsearch/entities/organization:
     post:
       summary: Search for multiple organizations through sanction lists
@@ -526,21 +524,20 @@ paths:
           In order to perform a search on multiple organizations through the sanction lists, the name and the desired sanction lists are required. Additionally, a unique index has to be assigned to each organization searched for in order to map the results to it in the output payload. The search returns a list with all the possible matches with a score. Advanced attributes can be provided in order to make the search results stricter.
       tags:
         - Batch Search
-  '/sanctions/list/entry/{uuid}':
+  '/list/cfsp/{entityLogicalID}':
     get:
       summary: Your GET endpoint
-      tags: []
+      tags:
+        - Sanction List Entry
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                oneOf:
-                  - $ref: '#/components/schemas/cfsp'
-                  - $ref: '#/components/schemas/sdn'
+                $ref: '#/components/schemas/cfsp'
               examples:
-                cfsp_example_response:
+                example:
                   value:
                     fileGenerationDate: 29/04/2020
                     Entity_LogicalId: 43
@@ -674,9 +671,36 @@ paths:
     parameters:
       - schema:
           type: string
-        name: uuid
+        name: entityLogicalID
         in: path
         required: true
+        description: The entity logical ID in the CFSP sanctions list from which all the entries will be returned
+  '/list/sdn/{uid}':
+    get:
+      summary: Your GET endpoint
+      tags:
+        - Sanction List Entry
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/sdn'
+              examples:
+                example:
+                  value:
+                    publishDate: ''
+                    recordCount: ''
+                    uid: ''
+      operationId: get-list-sdn
+      description: Get the entry from the official sanctions list based on the result from the search calls
+    parameters:
+      - schema:
+          type: string
+        name: uid
+        in: path
+        description: The UID in the SDN sanctions list from which all the entries will be returned
 components:
   schemas:
     personSearchAttributes:
@@ -973,11 +997,30 @@ components:
     sdn:
       title: sdn
       type: object
-      properties:
-        id:
-          type: string
       x-tags:
         - Sanction List Payloads
+      properties:
+        publishDate:
+          type: string
+        recordCount:
+          type: string
+        uid:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        sdnType:
+          type: string
+        program:
+          type: string
+        aka:
+          type: string
+        dateOfBirth:
+          type: string
+        placeOfBirth:
+          type: string
+      x-examples: {}
     cfsp:
       title: cfsp
       type: object
